<resources>
    <string name="app_name">Tip Time</string>
    <string name="service_question">How was the service?</string>
    <string name="cost_service">Cost of service</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="calculate">Calculate</string>
</resources>